--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 <body>
   <div class="main">
     <header class="header">
-      <a href="" class="logo"></a>
+      <a class="logo">
+        <img src="./images/logo.png" alt="лого">
+      </a>
       <nav>
         <ul class="header__nav">
           <li class="header__item">
