update main block

--- a/src/index.html
+++ b/src/index.html
@@ -34,26 +34,47 @@
         </ul>
       </nav>
       <a href="tel:+7945342" class="header__tel">+7 945 342 55 55</a>
-      <button class="header__cart">
+      <button class="header__cart" type="button">
         <span class="header__counter">0</span>
       </button>
     </header>
     <div class="container">
-      <div class="main__text">
-        <h1 class="title title_block">
-          Здоровая еда &ndash;
-          <span class="title__span">это просто!</span>
-        </h1>
-        <div class="main__item">
-          <p class="description description_size_s">
-            Сеть магазинов полезных продуктов питания,  производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов
-          </p>
-          <div class="main__link">
-            <a href="" class="link">Перейти в каталог</a>
+      <div class="main__flex">
+        <div class="main__text">
+          <h1 class="title title_block">
+            Здоровая еда -
+            <span class="title__span">это просто!</span>
+          </h1>
+          <div class="main__item">
+            <p class="description description_size_s">
+              Сеть магазинов полезных продуктов питания,  производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов
+            </p>
+            <div class="main__link">
+              <a href="" class="link">Перейти в каталог</a>
+            </div>
           </div>
+        </div>
+        <div class="main__cover">
+          <div class="main__line">
+            <img class="main__image" src="images/plate.png" alt="тарелка с салатом">
+          </div>
+          <button class="main__btn main__btn_one" type="button">
+            <span class="main__food">Авокадо</span> 134 руб
+          </button>
+          <button class="main__btn main__btn_two" type="button">
+            <span class="main__food">Картофель</span> 169 руб
+          </button>
+          <button class="main__btn main__btn_three" type="button">
+            <span class="main__food">Томаты</span> 215 руб
+          </button>
         </div>
       </div>
     </div>
+    <img class="main__tomato" src="images/tomato.png" alt="" aria-hidden="true">
+    <img class="main__cucumber" src="images/cucumber.png" alt="" aria-hidden="true">
+    <img class="main__avocado" src="images/avocado.png" alt="" aria-hidden="true">
+    <img class="main__pepper" src="images/pepper.png" alt="" aria-hidden="true">
+    <img class="main__beans" src="images/beans.png" alt="" aria-hidden="true">
   </div>
 </body>
 </html>
