--- a/src/index.html
+++ b/src/index.html
@@ -76,5 +76,65 @@
     <img class="main__pepper" src="images/pepper.png" alt="" aria-hidden="true">
     <img class="main__beans" src="images/beans.png" alt="" aria-hidden="true">
   </div>
+  <section class="offer">
+    <div class="container">
+      <h2 class="title title_block">
+        Что мы
+        <span class="title__span">предлагаем</span>
+      </h2>
+      <div class="offer__text">
+        <p class="description description_size_m">
+          Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
+        </p>
+      </div>
+      <div class="offer__slider">
+        <div class="swiper offerSwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide swiper-slide_card_one">
+              <h3 class="swiper-slide__title">
+                Молочные продукты
+              </h3>
+              <p class="swiper-slide__text">
+                В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+              </p>
+              <a href="#" class="swiper-slide__link">
+                <svg class="plus-icon" version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
+                  <style type="text/css">
+                    .st0{fill:none;stroke:#27300F;}
+                    .st1{fill:#27300F;}
+                  </style>
+                  <circle id="Эллипс_8_копия_3" class="st0" cx="15.1" cy="15" r="14.3"/>
+                  <g>
+                    <g>
+                      <path class="st1" d="M22.4,14.3h-6.7V7.6c0-0.3-0.3-0.6-0.6-0.6c-0.3,0-0.6,0.3-0.6,0.6v6.7H7.7c-0.3,0-0.6,0.3-0.6,0.6
+                        s0.3,0.6,0.6,0.6h6.7v6.7c0,0.3,0.3,0.6,0.6,0.6s0.6-0.3,0.6-0.6v-6.7h6.7c0.3,0,0.6-0.3,0.6-0.6C23,14.6,22.7,14.3,22.4,14.3z"/>
+                    </g>
+                  </g>
+                </svg>
+                Подробнее
+              </a>
+            </div>
+            <div class="swiper-slide swiper-slide_card_two">
+              <h3 class="swiper-slide__title">
+                Бакалея
+              </h3>
+            </div>
+            <div class="swiper-slide swiper-slide_card_three">              
+              <h3 class="swiper-slide__title">
+                Мясо, птица
+              </h3>
+            </div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
