add section about

--- a/src/index.html
+++ b/src/index.html
@@ -94,25 +94,12 @@
               <h3 class="swiper-slide__title">
                 Молочные продукты
               </h3>
-              <p class="swiper-slide__text">
-                В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
-              </p>
-              <a href="#" class="swiper-slide__link">
-                <svg class="plus-icon" version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
-                  <style type="text/css">
-                    .st0{fill:none;stroke:#27300F;}
-                    .st1{fill:#27300F;}
-                  </style>
-                  <circle id="Эллипс_8_копия_3" class="st0" cx="15.1" cy="15" r="14.3"/>
-                  <g>
-                    <g>
-                      <path class="st1" d="M22.4,14.3h-6.7V7.6c0-0.3-0.3-0.6-0.6-0.6c-0.3,0-0.6,0.3-0.6,0.6v6.7H7.7c-0.3,0-0.6,0.3-0.6,0.6
-                        s0.3,0.6,0.6,0.6h6.7v6.7c0,0.3,0.3,0.6,0.6,0.6s0.6-0.3,0.6-0.6v-6.7h6.7c0.3,0,0.6-0.3,0.6-0.6C23,14.6,22.7,14.3,22.4,14.3z"/>
-                    </g>
-                  </g>
-                </svg>
-                Подробнее
-              </a>
+              <div class="swiper-slide__hover">
+                <p class="swiper-slide__text">
+                  В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                </p>
+                <a href="#" class="swiper-slide__link">Подробнее</a>
+              </div>
             </div>
             <div class="swiper-slide swiper-slide_card_two">
               <h3 class="swiper-slide__title">
@@ -133,6 +120,35 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-pagination"></div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="about">
+    <div class="container">
+      <h2 class="title title_block">
+        В чем наша
+        <span class="title__span">уникальность</span>
+      </h2>
+      <div class="about__box">
+        <div class="about__text">
+          <p class="description description_size_s">
+            Мы полностью контролируем весь цикл производства – от поля до прилавка за счет собственной серьезной материальной и научной базы. Наш подход направлен на высокие технологии и достижения научного прогресса
+          </p>
+        </div>
+        <ul class="about__list">
+          <li class="about__item">
+            <div class="about__icon about__icon_fruits"></div>
+            Здоровье
+          </li>
+          <li class="about__item">
+            <div class="about__icon about__icon_traditional"></div>
+            Традиции
+          </li>
+          <li class="about__item">
+            <div class="about__icon about__icon_good"></div>
+            Вкус
+          </li>
+        </ul>
       </div>
     </div>
   </section>
