--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,10 @@
           Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
         </p>
       </div>
-      <div class="offer__slider">
+      <div class="slider">
         <div class="swiper offerSwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide swiper-slide_card_one">
+            <div class="swiper-slide swiper-slide_card_one swiper-slide_white">
               <h3 class="swiper-slide__title">
                 Молочные продукты
               </h3>
@@ -101,12 +101,12 @@
                 <a href="#" class="swiper-slide__link">Подробнее</a>
               </div>
             </div>
-            <div class="swiper-slide swiper-slide_card_two">
+            <div class="swiper-slide swiper-slide_card_two swiper-slide_white">
               <h3 class="swiper-slide__title">
                 Бакалея
               </h3>
             </div>
-            <div class="swiper-slide swiper-slide_card_three">              
+            <div class="swiper-slide swiper-slide_card_three swiper-slide_white">              
               <h3 class="swiper-slide__title">
                 Мясо, птица
               </h3>
@@ -137,19 +137,333 @@
         </div>
         <ul class="about__list">
           <li class="about__item">
-            <div class="about__icon about__icon_fruits"></div>
             Здоровье
           </li>
           <li class="about__item">
-            <div class="about__icon about__icon_traditional"></div>
             Традиции
           </li>
           <li class="about__item">
-            <div class="about__icon about__icon_good"></div>
             Вкус
           </li>
         </ul>
       </div>
+    </div>
+  </section>
+  <section class="trends">
+    <div class="container">
+      <h2 class="title">
+        Наши
+        <span class="title__span">новинки</span>
+      </h2>
+      <div class="trends__text">
+        <p class="description description_size_m">
+          Будь в тренде с современым миром, и будь здоров вместе с нами
+        </p>
+      </div>
+      <div class="slider">
+        <div class="swiper trendsSwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="swiper-slide__cover">
+                <img class="swiper-slide__image" src="images/catalog/good-1.png" alt="">
+              </div>
+              <h3 class="swiper-slide__title">
+                Молоко топленое
+              </h3>
+              <p class="swiper-slide__description">
+                Молоко Healthy food топленеое мдж 4%	500гр
+              </p>
+              <p class="swiper-slide__price">
+                159 руб/шт
+              </p>
+              <div class="swiper-slide__footer">
+                <div class="counter">
+                  <button class="counter__btn counter__minus"></button>
+                  <input class="counter__input" type="text" value="0">
+                  <button class="counter__btn counter__plus"></button>
+                </div>
+                <a href="#" class="link">В корзину</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-slide__cover">
+                <img class="swiper-slide__image" src="images/catalog/good-2.png" alt="">
+              </div>
+              <h3 class="swiper-slide__title">
+                Яйцо перепелиное
+              </h3>
+              <p class="swiper-slide__description">
+                QEGG Яйцо перепелиное 20шт
+              </p>
+              <p class="swiper-slide__price">
+                94 руб/упак
+              </p>
+              <div class="swiper-slide__footer">
+                <div class="counter">
+                  <button class="counter__btn counter__minus"></button>
+                  <input class="counter__input" type="text" value="0">
+                  <button class="counter__btn counter__plus"></button>
+                </div>
+                <a href="#" class="link">В корзину</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-slide__cover">
+                <img class="swiper-slide__image" src="images/catalog/good-3.png" alt="">
+              </div>
+              <h3 class="swiper-slide__title">
+                Куриное филе Оссобуко
+              </h3>
+              <p class="swiper-slide__description">
+                Куриное филе Оссобуко (Ангус) охл скин. В вакумной уапаковке
+              </p>
+              <p class="swiper-slide__price">
+                1009 руб/кг
+              </p>
+              <div class="swiper-slide__footer">
+                <div class="counter">
+                  <button class="counter__btn counter__minus"></button>
+                  <input class="counter__input" type="text" value="0">
+                  <button class="counter__btn counter__plus"></button>
+                </div>
+                <a href="#" class="link">В корзину</a>
+              </div>
+            </div>
+            <div class="swiper-slide">2</div>
+            <div class="swiper-slide">3</div>
+            <div class="swiper-slide">4</div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="catalog">
+    <div class="container">
+      <h2 class="title">
+        Каталог
+      </h2>
+      <div class="catalog__text">
+        <p class="description description_size_m">
+          Еда которая заботиться о вашей фигуре
+        </p>
+      </div>
+      <div class="catalog__categories">
+        <input id="category-1" class="catalog__input" type="checkbox" name="category" checked>
+        <label class="catalog__btn" for="category-1">Молочные продукты</label>
+        <input id="category-2" class="catalog__input" type="checkbox" name="category">
+        <label class="catalog__btn" for="category-2">Бакалея</label>
+        <input id="category-3" class="catalog__input" type="checkbox" name="category">
+        <label class="catalog__btn" for="category-3">Мясо, птица</label>
+        <input id="category-4" class="catalog__input" type="checkbox" name="category">
+        <label class="catalog__btn" for="category-4">Детям</label>
+        <input id="category-5" class="catalog__input" type="checkbox" name="category">
+        <label class="catalog__btn" for="category-5">Овощи и фрукты</label>
+      </div>
+      <ul class="catalog__list">
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-1.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Молоко топленое
+            </h3>
+            <p class="card__description">
+              Молоко Healthy food топленеое мдж 4%	500гр
+            </p>
+            <p class="card__price">
+              159 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-4.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Йогурт с черникой
+            </h3>
+            <p class="card__description">
+              Йогурт Healthy food  с черникой, питьевой 1,5%, 750 г
+            </p>
+            <p class="card__price">
+              89 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-5.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Творог
+            </h3>
+            <p class="card__description">
+              Творог Healthy food Рассыпчатый 9% 350 г
+            </p>
+            <p class="card__price">
+              216 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-6.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Моцарелла
+            </h3>
+            <p class="card__description">
+              Моцарелла Healthy food 45%, 0.125 кг
+            </p>
+            <p class="card__price">
+              359 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-7.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Масло сливочное
+            </h3>
+            <p class="card__description">
+              Масло Healthy food  сливочное 82,5%, 200г
+            </p>
+            <p class="card__price">
+              139 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-8.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Йогурт термостатный
+            </h3>
+            <p class="card__description">
+              Йогурт Healthy food термостатный с фруктово-ягодным 2,5 %, 165 г
+            </p>
+            <p class="card__price">
+              159 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-9.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Сыр
+            </h3>
+            <p class="card__description">
+              Сыр Healthy food Сливочный 45% 200г
+            </p>
+            <p class="card__price">
+              559 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+
+        <li class="catalog__item">
+          <article class="card">
+            <div class="card__cover">
+              <img class="card__image" src="images/catalog/good-10.png" alt="">
+            </div>
+            <h3 class="card__title">
+              Соус для салата
+            </h3>
+            <p class="card__description">
+              Соус для салата Healthy food пикантыный 4%  70гр
+            </p>
+            <p class="card__price">
+              59 руб/шт
+            </p>
+            <div class="card__footer">
+              <div class="counter counter_small">
+                <button class="counter__btn counter__minus"></button>
+                <input class="counter__input" type="text" value="0">
+                <button class="counter__btn counter__plus"></button>
+              </div>
+              <a href="#" class="link link_small">В корзину</a>
+            </div>
+          </article>
+        </li>
+      </ul>
+      <button class="catalog__load">Загрузить ещё</button>
     </div>
   </section>
 </body>
