--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <a class="logo">
         <img src="./images/logo.svg" alt="лого">
       </a>
-      <nav>
+      <nav class="header__navigation">
         <ul class="header__nav">
           <li class="header__item">
             <a href="#" class="header__link">Наша продукция</a>
@@ -453,7 +453,7 @@
           </div>
         </article>
       </div>
-      <button class="catalog__btn">Загрузить ещё</button>
+      <button class="catalog__btn catalog__btn_preloader">Загрузить ещё</button>
     </div>
   </section>
   <section class="delivery">
